add shit music to promo page

--- a/app/views/photos/promo.html.erb
+++ b/app/views/photos/promo.html.erb
@@ -35,4 +35,11 @@
   </div>
 </div>
 
+<div style="opacity:0">
+  <audio controls="controls" autoplay="autoplay" loop="loop">
+    <source src="sound.mp3" type="audio/mp3" />
+  </audio>
+</div>
+
+
 <script>$(document).ready(function(){ promo() })</script>
