--- a/app/views/layouts/promo.html.erb
+++ b/app/views/layouts/promo.html.erb
@@ -9,15 +9,14 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="<%= @body_class %>">
+    <%= render  'shared/social_libs' %>
 
     <%= link_to image_tag('promo/goto-site.png'), main_page_path, id: 'bri-goto-site' %>
     
     <%= yield %>
     
     <footer class="<%= @body_class %>">
-
       <div class="bri-links">
-
         <div class="bri-news left">
           <span class="left">Читайте<br>яркие новости</span>
           <%= link_to image_tag('promo/index/fb.png'), 'http://www.facebook.com/festivalyarkieludi', target: '_blank' %>
@@ -55,7 +54,9 @@
 
     </footer>
 
+
     <script type="text/javascript">
+      <!-- GAQ -->
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-32745172-1']);
       _gaq.push(['_setDomainName', 'bright-people.ru']);
