--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,11 +1,13 @@
 <% @body_class="photos" %>
 
+<% content_for :after_head do %>
+  <link rel="image_src" href="" id="link-img" />
+  <meta property="og:image" content="" />
+<% end %>
+
 <div id="bri-content">
-
   <header>
-
     <div id="bri-clock"></div>
-
     <div id="bri-photographers">
       <% User.junior_photographers.order('position ASC').each do |photographer| %><div class="bri-photographer" data-id="<%= photographer.id %>" data-position="<%= photographer.position %>" >
 	  <%= image_tag photographer.avatar.url, class: 'bri-photo' %>
@@ -32,6 +34,7 @@
 
   <div class="clearfix"></div>
 
+
   <div id="bri-photos">
     <div class="am-container" id="am-container">
       <div class='hidden-photos'>
@@ -53,39 +56,12 @@
 
 <script> $(document).ready(function(){ photos() })</script>
 
-
-<div style="display:none">
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-
-<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
-<script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
-<script type="text/javascript">
-  VK.init({apiId: 2953652, onlyWidgets: true});
-</script>
-<!-- Put this div tag to the place, where the Like block will be -->
-
-<script type="text/javascript">
-  VK.Widgets.Like("vk_like", {type: "mini", height: 20});
-</script>
-
-<script type="text/javascript"><!--
-document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));
---></script>
-
-
-
-
-
+<div id="social_photo" style="display:none;">
+  <div class="count_view"></div>
+  <div class="download_pic"><a></a></div>
+  <div class="pp_social">
+    <div class="soc_like_button">
+      <div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+    </div>
+  </div>
 </div>
