--- a/app/views/shared/_social_libs.html.erb
+++ b/app/views/shared/_social_libs.html.erb
@@ -28,7 +28,19 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/ru_RU/all.js";
   fjs.parentNode.insertBefore(js, fjs);
- }(document, 'script', 'facebook-jssdk'));
+  }(document, 'script', 'facebook-jssdk'));
+
+  !function(d,s,id){
+  var js,fjs=d.getElementsByTagName(s)[0];
+  if(!d.getElementById(id)){js=d.createElement(s);
+  js.id=id;js.src="//platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+   })();
 
  window.vk_init = function(title, url, image){
   title = typeof(title) !== 'undefined' ? title : "";
