--- a/app/views/photos/promo.html.erb
+++ b/app/views/photos/promo.html.erb
@@ -9,7 +9,12 @@
     <div id="bri-fest-title"></div>
     <div id="bri-find-me">
       <%= link_to image_tag('promo/index/find-me.png'), photos_clock_path, class: 'bri-nav' %>
-      <div class="bri-photo-archive">Фотографии обновляются каждый день<br />Полный архив фотографий вы можете увидеть в пятницу <br />24 августа</div>
+      <div class="bri-photo-archive">
+	Друзья!<br />
+	Спасибо, что были с нами на фестивале "Яркие Люди"!<br />
+        Ищите свои фотографии на нашем сайте!<br />
+        До новых встреч!<br />
+      </div>
     </div>
     <%= link_to image_tag('promo/index/fest.png'), photos_festival_path, class: 'bri-nav', id: 'bri-fest' %>
 
