--- a/app/assets/stylesheets/promo/festival.css
+++ b/app/assets/stylesheets/promo/festival.css
@@ -1,8 +1,9 @@
-
-  #bri-bezier
-  {
-    position: absolute;
-  }
+body.festival 
+{ 
+  overflow: auto;
+  height: auto;
+  background-color: #fff; 
+}
 
   #bri-fest-events
   {
@@ -18,7 +19,7 @@
       width: 100%; min-height: 20px;
     }
 
-    #bri-fest-events .bri-sub div { float: left; width: 190px}
+    #bri-fest-events .bri-sub div { float: left; margin-right: 30px;}
 
       #bri-fest-events .bri-item a
       {
@@ -46,7 +47,17 @@
         display: none;
       }
 
-
+.am-wrapper
+{
+    float: left;
+    position: relative;
+    overflow: hidden;
+}
+  .am-wrapper img
+  {
+      position: absolute;
+      outline: none;
+  }
 
 footer.festival
 {
