Festival page fix

--- a/app/views/photos/festival.html.erb
+++ b/app/views/photos/festival.html.erb
@@ -19,8 +19,8 @@
 
   </header>
   
-  <div class="container am-container" id="am-container">
-    <%= render 'photos', photos: @photos %>
+  <div class="container am-container hidden-photos" id="am-container">
+      <%= render 'photos', photos: @photos %>
   </div>
   <div class="clearfix"></div>
 
