--- a/app/assets/stylesheets/promo/prettyPhoto.css
+++ b/app/assets/stylesheets/promo/prettyPhoto.css
@@ -43,7 +43,7 @@ div.pp_default .pp_details { position: static !important; float: none !important
 div.pp_default .pp_previous{ margin-left: -25px;}
 div.pp_default .pp_next{ margin-right: -25px;}
 
-div.pp_default .count_view { margin-top: 5px; float: left; width: 80px; font-family: Futura; font-size: 32px; color: #ccc; line-height: 36px; height: 37px; padding-left: 70px; background:url(/assets/promo/photos/light-count.png) 0 0 no-repeat}
+div.pp_default .count_view { margin: 5px 0 10px; width: 80px; font-family: Futura; font-size: 32px; color: #ccc; line-height: 36px; height: 37px; padding-left: 70px; background:url(/assets/promo/photos/light-count.png) 0 0 no-repeat}
 div.pp_default .download_pic { margin-top: 5px; float: right; height: 46px; width: 49px;  background:url(/assets/promo/photos/light-hd.png) 0 0 no-repeat}
 div.pp_default .download_pic a { display: block; height: 46px; width: 49px;}
 
