--- a/app/assets/stylesheets/promo/photos.css
+++ b/app/assets/stylesheets/promo/photos.css
@@ -275,7 +275,7 @@ body.photos
 
       .bri-photo-box.bri-hd.active img { opacity: 1; }
 
-.soc_like_button { float: left; margin-right: 10px; height: 22px; margin-bottom: 4px; width: 100px;}
+.soc_like_button { float: left; margin-right: 10px; height: 22px; margin-bottom: 4px;}
 
 
 
