--- a/app/assets/stylesheets/promo/prettyPhoto.css
+++ b/app/assets/stylesheets/promo/prettyPhoto.css
@@ -19,7 +19,7 @@ div.pp_default .pp_expand{ display: none !important;background:url(/assets/promo
 div.pp_default .pp_expand:hover{ display: none !important;background:url(/assets/promo/prettyPhoto/default/sprite.png) 0 -56px no-repeat;cursor:pointer}
 div.pp_default .pp_contract{background:url(/assets/promo/prettyPhoto/default/sprite.png) 0 -84px no-repeat;cursor:pointer;width:28px;height:28px}
 div.pp_default .pp_contract:hover{background:url(/assets/promo/prettyPhoto/default/sprite.png) 0 -113px no-repeat;cursor:pointer}
-div.pp_default .pp_close{width:30px;height:30px;background:url(/assets/promo/photos/light-close.png) 0 0 no-repeat;cursor:pointer}
+div.pp_default .pp_close{margin: 5px 5px 0 0; width:30px;height:30px;background:url(/assets/promo/photos/light-close.png) 0 0 no-repeat;cursor:pointer}
 div.pp_default .pp_gallery ul li a{background:url(/assets/promo/prettyPhoto/default/default_thumb.png) center center #f8f8f8;border:1px solid #aaa}
 div.pp_default .pp_social{ float: none !important;}
 div.pp_default .pp_gallery a.pp_arrow_previous,div.pp_default .pp_gallery a.pp_arrow_next{position:static;left:auto}
