--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -19,10 +19,10 @@
 	    <div class="order_bank_catd">Президент ОАО<br />«МОСКОВСКИЙ <br />КРЕДИТНЫЙ БАНК»<br />Александр Николашин</div>
 	    <div class="bank_text">
 	      МОСКОВСКИЙ КРЕДИТНЫЙ БАНК <br />
-	      в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди».<br />
-	      Гости мероприятия смогут<br />
-	      не только весело провести время, но и открыть двери в мир творческих профессий<br />
-	      и искусства.<br />
+	      в честь своего 20-летия подарил городу праздник – детский творческий фестиваль «Яркие люди».<br />
+	      Мы рады были видеть вас на празднике, наблюдать за тем, как дети на мастер-классах танцевали, 
+	      рисовали, клеили, лепили, веселились и радовались. Надеемся, что наш фестиваль добавил в вашу жизнь 
+	      ярких красок и приоткрыл для детей дверь в мир искусства и творчества.<br />
 	      <%= link_to 'Подробнее', page_path('about_bank'), class: :to_bank_link %>
 	    </div>
 	    <div class="clear"></div>
