Fix acitivty teacher

--- a/app/views/activities/_about_activity.html.erb
+++ b/app/views/activities/_about_activity.html.erb
@@ -53,7 +53,7 @@
 	  </div>
 	  <div class="info">
 	    <div class="name"><%= teacher.name %></div>
-	    <%= teacher.description %>
+	    <%== teacher.description %>
 	  </div>
 	</div>
       <% end %>
