--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -12,8 +12,13 @@
 	<% pics = ['/assets/samp/adv.jpg', '/assets/samp/R7.jpg', '/assets/samp/baner.jpg', '/assets/samp/school.jpg', '/assets/samp/var002.gif'] %>
 	<% links = ["http://www.krokha.ru", "http://radio7.ru/?utm_source=bright-people&utm_medium=promo&utm_campaign=bright-people", "http://www.bg.ru", "http://schools.mn.ru/schools/", "http://www.mama-tv.ru"] %>
 	<% j = rand(0..4) %>
-	<div class="adv"><%= link_to image_tag(pics[j]), links[j], "target"=>"_blank" %></div>
-	<%= link_to image_tag('button_gallery.png'), '/promo' %>
+	<div class="adv">
+	  <%= link_to image_tag(pics[j]), links[j], "target"=>"_blank" %><br />
+	  <div style="padding-top: 10px;">
+	    <%= link_to image_tag('button_gallery.png'), '/promo' %>
+	  </div> 
+	</div>
+
 	<div class="content-wrapper">
 	  <div class="bank_info">
 	    <div class="title">Добро пожаловать в мир ярких людей!</div>
