--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -1,57 +1,64 @@
-<div class="soc_like_button">        
-<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
-<script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
-<script type="text/javascript">
-  VK.init({apiId: 2953652, onlyWidgets: true});
-</script>
-<!-- Put this div tag to the place, where the Like block will be -->
-<div id="vk_like"></div>
-<script type="text/javascript">
-  VK.Widgets.Like("vk_like", {type: "mini", height: 20});
-</script>
-<div id='vk_share'>
-<script type="text/javascript"><!--
-document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));
---></script>
-</div>
+<div class="soc_like_button">
+  <!-- Put this script tag to the <head> of your page -->
+  <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
+  <script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
+  <script type="text/javascript">
+    VK.init({apiId: 2953652, onlyWidgets: true});
+  </script>
+
+  <!-- Put this div tag to the place, where the Like block will be -->
+  <div id="vk_like"></div>
+  <script type="text/javascript">
+    VK.Widgets.Like("vk_like", {type: "mini", height: 20});
+  </script>
+  <div id='vk_share'></div>
 </div>
 
-<div class="soc_like_button">   
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
+<div class="soc_like_button">
+  <div id="fb-root"></div>
+  <script>
+  var facebook_api_key = "359292310775946";
+  window.fbAsyncInit = function(){
+  FB.init({
+      appId      : facebook_api_key,
+      status     : true,
+      cookie     : true,
+      xfbml      : true
+    });
+
+  };
+
+  (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
+  js.src = "//connect.facebook.net/ru_RU/all.js";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-send="true" data-layout="button_count" data-width="230" data-show-faces="false"></div>
-</div>    
-    
-<div class="soc_like_button"> 
-<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ru">Твитнуть</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <div class="fb-like" data-send="true" data-layout="button_count" data-width="230" data-show-faces="false"></div>
 </div>
 
-<div class="soc_like_button"> 
-<!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
-<g:plusone size="medium"></g:plusone>
+<div class="soc_like_button">
+  <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ru">Твитнуть</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
-<!-- Поместите этот вызов функции отображения в соответствующее место. -->
-<script type="text/javascript">
-  window.___gcfg = {lang: 'ru'};
+<div class="soc_like_button">
+  <g:plusone size="medium"></g:plusone>
+  <script type="text/javascript">
+    window.___gcfg = {lang: 'ru'};
 
-  (function() {
+    (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
     po.src = 'https://apis.google.com/js/plusone.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+    })();
+  </script>
 </div>
 
-<div class="soc_like_button"> 
-<link href="http://stg.odnoklassniki.ru/share/odkl_share.css" rel="stylesheet">
-<a class="odkl-share-oc" href=<%= @fb_url %> onclick="ODKL.Share(this);return false;" ><span>0</span></a>
-<script src="http://stg.odnoklassniki.ru/share/odkl_share.js" type="text/javascript" ></script>
+<div class="soc_like_button">
+  <link href="http://stg.odnoklassniki.ru/share/odkl_share.css" rel="stylesheet">
+  <a class="odkl-share-oc" href=<%= @fb_url %> onclick="ODKL.Share(this);return false;" ><span>0</span></a>
+  <script src="http://stg.odnoklassniki.ru/share/odkl_share.js" type="text/javascript" ></script>
 </div>
