--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -16,27 +16,14 @@
 
 <div class="soc_like_button">
   <div id="fb-root"></div>
-  <script>
-  var facebook_api_key = "359292310775946";
-  window.fbAsyncInit = function(){
-  FB.init({
-      appId      : facebook_api_key,
-      status     : true,
-      cookie     : true,
-      xfbml      : true
-    });
-
-  };
-
-  (function(d, s, id) {
+  <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ru_RU/all.js";
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
   fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-  </script>
-  <div class="fb-like" data-send="true" data-layout="button_count" data-width="230" data-show-faces="false"></div>
+}(document, 'script', 'facebook-jssdk'));</script>
+  <div class="fb-like" data-send="true" data-layout="button_count" data-width="230" data-show-faces="false" data-href="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>"></div>
 </div>
 
 <div class="soc_like_button">
