--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -20,7 +20,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ru_RU/all.js";
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
   <div class="fb-like" data-send="true" data-layout="button_count" data-width="230" data-show-faces="false" data-href="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>"></div>
