--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,7 +44,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .header_wrapper { margin:auto; position:relative; min-width:960px; padding:25px 0px 15px 0px; border-bottom:2px solid #ccc;}
 
-#header .header_flash_wrapper  { position:relative; background:#7e1222 url(/assets/header_bg.jpg) no-repeat center top; height:200px;}
+#header .header_flash_wrapper  { text-align: center; position:relative; background:#7e1222 url(/assets/header_bg.jpg) no-repeat center top; height:200px;}
 #header .header_flash_wrapper a { display:block; height:200px; width:100%; position:absolute; z-index:10}
 
 #flashcontent_1 { background:url(/assets/header_cap.jpg) no-repeat center top;}
