fix comments in script

--- a/app/views/shared/_social_libs.html.erb
+++ b/app/views/shared/_social_libs.html.erb
@@ -3,8 +3,8 @@
 
 <div id="fb-root"></div>
 <script>
-  <!-- SOCIAL API VARIABLES -->
-  <!-- PRODUCTION -->
+  // SOCIAL API VARIABLES
+  // PRODUCTION
   var facebook_api_key = "359292310775946";
   var vk_api_key = "2953652";
   
