archive: add year to static pages

--- a/app/views/pages/about_festival.html.erb
+++ b/app/views/pages/about_festival.html.erb
@@ -1,5 +1,5 @@
 <div class="pages">
-  <%== Page.as('about_festival').text %>
+  <%= raw @page.text %>
   <!-- NOT EDIT -->
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
