--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -1,5 +1,5 @@
 <div class="pages">
-  <%== Page.as('org_komitet').text %>
+  <%== @page.text %>
   <!-- NOT EDIT -->
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
