--- a/app/views/pages/inf.html.erb
+++ b/app/views/pages/inf.html.erb
@@ -1,13 +1,13 @@
 <div class="pages">
-  <%== Page.as('inf').text %>
-  
-    <!-- DO NOT EDIT -->
-    <div class="sidebar">
-      <%= render 'shared/sidebar' %>
-    </div>
-    <div class="clear">
-    </div>
+  <%== @page.text %>
+
+  <!-- DO NOT EDIT -->
+  <div class="sidebar">
+    <%= render 'shared/sidebar' %>
   </div>
+  <div class="clear">
+  </div>
+</div>
 
 <% content_for :title do %>
   Фестиваль Яркие Люди | Инфопартнёры
