--- a/app/views/creative_group/index.html.erb
+++ b/app/views/creative_group/index.html.erb
@@ -33,6 +33,8 @@
     <% end %>
       
       <div class="clear"></div>
+      
+      <%= render 'shared/archive' %>
     </div>
   </div>
 </div>
