--- a/app/views/admin/participants/_form.html.erb
+++ b/app/views/admin/participants/_form.html.erb
@@ -1,5 +1,7 @@
 <%= semantic_form_for [:admin, @participant], html: { multipart: true } do |f| %>
   <%= f.inputs 'Основное' do %>
+    <%= f.input :year, as: :select, collection: (2012..Time.now.year+5).to_a %>
+
     <%= f.input :title %>
 
     <%= f.input :headliner, as: :select, collection: [['Да', true],['Нет', false]], include_blank: false %>
