--- a/app/views/creative_group/index.html.erb
+++ b/app/views/creative_group/index.html.erb
@@ -3,17 +3,7 @@
 <% end %>
 
 <div class="pages">
-  <div class="post_category_menu">
-    <ul>
-      <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
-      <li class="creative_ico active"><a href="/creative_group">Творческая группа</a></li>
-      <li class="participants_ico"><a href="/participants?category=music_stage">Программа</a></li>
-      <li class="headliners_ico"><a href="/participants">Хэдлайнеры</a></li>
-      <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
-      <li class="org_ico"><a href="/pages/inf">Инфопартнёры</a></li>
-    </ul>
-    <div class="clear"></div>
-  </div>
+  <%= render 'shared/post_category_menu' %>
   <div class="expert_list_wrapper">
     <div class="expert_list">
 
