--- a/app/views/pages/about_festival.html.erb
+++ b/app/views/pages/about_festival.html.erb
@@ -1,4 +1,6 @@
 <div class="pages">
+  <%= render 'shared/post_category_menu' %>
+  
   <%= raw @page.text %>
   <!-- NOT EDIT -->
   <div class="sidebar">
