--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,18 +6,16 @@
     <div class="footer_wrapper">
       <div class="left column">
         <div class="gen_sponsor">
-          
           <a href="http://mkb.ru/"><img src="/assets/footer_bank_bg.png" alt="" /></a>
-          <span>дарит городу праздник<br />
-в честь своего 20-летия</span>
         </div>
 
-	<div class="create license">
-	ОАО «МОСКОВСКИЙ КРЕДИТНЫЙ БАНК»<br />
-Генеральная лицензия Банка России<br />
-№ 1978 от 20 января 2000 г.
-	</div>
+        <div class="create license">
+          ОАО «МОСКОВСКИЙ КРЕДИТНЫЙ БАНК»<br />
+          Генеральная лицензия Банка России<br />
+          № 1978 от 20 января 2000 г.
+        </div>
 
+        <div class="bright_logo"><%= image_tag '/assets/footer_logo.png' %></div>
       </div>
       <div class="center column">
         <div class="menu">
