archive: show page strict by year

--- a/app/views/pages/muntyan.html.erb
+++ b/app/views/pages/muntyan.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <%= render 'shared/post_category_menu' %>
   
-  <%== @page.text %>
+  <%== @page.try(:text) %>
 </div>
 
 <% content_for :title do %>
