--- a/app/views/pages/about_festival.html.erb
+++ b/app/views/pages/about_festival.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <%= render 'shared/post_category_menu' %>
   
-  <%= raw @page.text %>
+  <%= raw @page.try(:text) %>
   <!-- NOT EDIT -->
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
