--- a/app/views/pages/inf.html.erb
+++ b/app/views/pages/inf.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <%= render 'shared/post_category_menu' %>
   
-  <%== @page.text %>
+  <%== @page.try(:text) %>
 
   <!-- DO NOT EDIT -->
   <div class="sidebar">
