--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <%= render 'shared/post_category_menu' %>
   
-  <%== @page.text %>
+  <%== @page.try(:text) %>
   <!-- NOT EDIT -->
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
