--- a/app/views/creative_group/show.html.erb
+++ b/app/views/creative_group/show.html.erb
@@ -2,17 +2,7 @@
   Фестиваль Яркие Люди | Экспертный Совет | <%= @creative.name %>
 <% end %>
 <div class="pages">
-  <div class="post_category_menu">
-    <ul>
-      <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
-      <li class="expert_ico active"><a href="/creative_group">Творческая группа</a></li>
-      <li class="participants_ico"><a href="/participants?category=music_stage">Программа</a></li>
-      <li class="headliners_ico"><a href="/participants">Хэдлайнеры</a></li>
-      <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
-      <li class="org_ico"><a href="/pages/inf">Инфопартнёры</a></li>
-    </ul>
-    <div class="clear"></div>
-  </div>
+  <%= render 'shared/post_category_menu' %>
   
   <div class="expert_big_info">
     <!-- OPTIMIZE: brrrr...brrr -->
