--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -1,4 +1,4 @@
-<% include_js :after_head, 'home-video/youTubeEmbed-jquery-1.0', 'home-video/jquery.swfobject.1-1-1.min' %>
+﻿<% include_js :after_head, 'home-video/youTubeEmbed-jquery-1.0', 'home-video/jquery.swfobject.1-1-1.min' %>
 <% content_for :after_head do %>
   <%= stylesheet_link_tag 'home-video/youTubeEmbed-jquery-1.0' %>
 <% end %>
@@ -22,13 +22,11 @@
 	<div class="content-wrapper">
 	  <div class="bank_info">
 	    <div class="title">Добро пожаловать в мир ярких людей!</div>
-	    <div class="order_bank_catd">Президент ОАО<br />«МОСКОВСКИЙ <br />КРЕДИТНЫЙ БАНК»<br />Александр Николашин</div>
+	    <div class="order_bank_catd">Председатель Правления МОСКОВСКОГО КРЕДИТНОГО БАНКА<br />Владимир Чубарь</div>
 	    <div class="bank_text">
-	      МОСКОВСКИЙ КРЕДИТНЫЙ БАНК <br />
-	      в честь своего 20-летия подарил городу праздник – детский творческий фестиваль «Яркие люди».<br />
-	      Мы рады были видеть вас на празднике, наблюдать за тем, как дети на мастер-классах танцевали, 
-	      рисовали, клеили, лепили, веселились и радовались. Надеемся, что наш фестиваль добавил в вашу жизнь 
-	      ярких красок и приоткрыл для детей дверь в мир искусства и творчества.<br />
+&laquo;Фестиваль &bdquo;Яркие люди&ldquo; впервые состоялся в&nbsp;прошлом году в&nbsp;честь юбилея банка. Тогда формат общегородского семейного праздника казался непривычным для Москвы, но&nbsp;позитивные отзывы, яркие эмоции и&nbsp;впечатления гостей фестиваля превзошли все наши ожидания! Хорошие события должны становится традицией!<br />
+
+Мы&nbsp;очень рады возможности снова внести свой вклад в&nbsp;праздник, открыть для всех маленьких москвичей чудеса связанные с&nbsp;творчеством и&nbsp;искусством. Быть может именно фестиваль поможет раскрыть и&nbsp;превратить детские таланты, в&nbsp;дело всей, безусловно, яркой и&nbsp;счастливой жизни&raquo;<br />
 	      <%= link_to 'Подробнее', page_path('about_bank'), class: :to_bank_link %>
 	    </div>
 	    <div class="clear"></div>
