--- a/app/views/pages/about_festival.html.erb
+++ b/app/views/pages/about_festival.html.erb
@@ -1,10 +1,10 @@
-<div class="pages">
+﻿<div class="pages">
   <%= render 'shared/post_category_menu' %>
 
   <%= raw @page.try(:text) %>
   <!-- NOT EDIT -->
   <div class="sidebar">
-    <%= render 'shared/sidebar' %>
+    <%= render 'shared/sidebar_promo' %>
   </div>
   <div class="clear"></div>
 </div>
