--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -23,10 +23,10 @@
 	  <div class="bank_info">
 	    <div class="title">Добро пожаловать в мир ярких людей!</div>
 	    <div class="order_bank_catd">Председатель Правления МОСКОВСКОГО КРЕДИТНОГО БАНКА<br />Владимир Чубарь</div>
-	    <div class="bank_text">
+	    <div class="bank_text"><div class="bank_scroll">
 &laquo;Фестиваль &bdquo;Яркие люди&ldquo; впервые состоялся в&nbsp;прошлом году в&nbsp;честь юбилея банка. Тогда формат общегородского семейного праздника казался непривычным для Москвы, но&nbsp;позитивные отзывы, яркие эмоции и&nbsp;впечатления гостей фестиваля превзошли все наши ожидания! Хорошие события должны становится традицией!<br />
 
-Мы&nbsp;очень рады возможности снова внести свой вклад в&nbsp;праздник, открыть для всех маленьких москвичей чудеса связанные с&nbsp;творчеством и&nbsp;искусством. Быть может именно фестиваль поможет раскрыть и&nbsp;превратить детские таланты, в&nbsp;дело всей, безусловно, яркой и&nbsp;счастливой жизни&raquo;<br />
+Мы&nbsp;очень рады возможности снова внести свой вклад в&nbsp;праздник, открыть для всех маленьких москвичей чудеса связанные с&nbsp;творчеством и&nbsp;искусством. Быть может именно фестиваль поможет раскрыть и&nbsp;превратить детские таланты, в&nbsp;дело всей, безусловно, яркой и&nbsp;счастливой жизни&raquo;<br /></div>
 	      <%= link_to 'Подробнее', page_path('about_bank'), class: :to_bank_link %>
 	    </div>
 	    <div class="clear"></div>
