crew disable description

--- a/app/views/crew/index.html.erb
+++ b/app/views/crew/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>
+﻿<% content_for :title do %>
   Фестиваль Яркие Люди | Команда
 <% end %>
 
@@ -23,7 +23,7 @@
         </div>
         <span class="name"><%= tm.name %></span>
         
-        <span class="info"><%= tm.description %></span>
+        <span class="info"></span>
       </div>
       <% if (index+1) % 6 == 0 %>
       <div class="clear"></div>
