--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 ﻿<div class="header_flash_wrapper">
   <a href="/"></a>
   <%#*<div id="flashcontent_1"></div>%>
-  <%= image_tag 'img_header.jpg' %>
+  <%= image_tag 'img_header.png' %>
 </div>
 
 <div class="wrapper">
