--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>
+﻿<% content_for :title do %>
   Фестиваль Яркие Люди | Участники фестиваля
 <% end %>
 
@@ -6,8 +6,8 @@
   <%= render 'shared/post_category_menu' %>
   <div class="common">
     <% unless @is_headliners_page %>         
-      <a href="/system/files/scheme_<%= @year || Time.now.year %>.pdf" class="pdf_link">Схема</a>
-      <a href="/system/files/schedule_<%= @year || Time.now.year %>.pdf" class="pdf_link">Расписание выступлений</a>
+      <a href="/assets/scheme_<%= @year || Time.now.year %>.pdf" class="pdf_link">Схема</a>
+      <a href="/assets/schedule_<%= @year || Time.now.year %>.pdf" class="pdf_link">Расписание выступлений</a>
       <%= render 'menu' %>
     <% end %>
 
