--- a/app/views/crew/index.html.erb
+++ b/app/views/crew/index.html.erb
@@ -5,10 +5,9 @@
 <div class="pages">
   <div class="post_category_menu">
     <ul>
-      <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
-      <li class="sponsors_ico"><a href="/sponsors">Попечительский совет</a></li>
+      <li class="experts_ico"><a href="/about_company">О компании</a></li>
+      <li class="sponsors_ico"><a href="/about_projects">Проекты</a></li>
       <li class="crew_ico active"><a href="/crew">Команда</a></li>
-      <li class="authors_ico"><a href="/authors">Авторы</a></li>
     </ul>
     <div class="clear"></div>
   </div>
