--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -79,7 +79,7 @@
               <%= link_to 'Яркий журнал', articles_path %>
             </li>
             <li <%= 'class=selected' if @expert_page or current_page?(sponsors_path) %>>
-              <%= link_to 'О нас', experts_path %>
+              <%= link_to 'О нас', '/about_company' %>
             </li>
           </ul>
         </div>
