upd header&sponsors

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
-﻿<div class="header_flash_wrapper">
+﻿<div style="width:1235px; margin:0 auto;"><%= image_tag 'top.png' %></div>
+<div class="header_flash_wrapper">
   <a href="/"></a>
   <%#*<div id="flashcontent_1"></div>%>
   <%= image_tag 'img_header.png' %>
