--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,17 +1,9 @@
-<% content_for :title do %>
+﻿<% content_for :title do %>
   Фестиваль Яркие Люди | Попечительский Совет
 <% end %>
 
 <div class="pages">
-  <div class="post_category_menu">
-    <ul>
-      <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
-      <li class="sponsors_ico active"><a href="/sponsors">Попечительский совет</a></li>
-      <li class="crew_ico"><a href="/crew">Команда</a></li>
-      <li class="authors_ico"><a href="/authors">Авторы</a></li>
-    </ul>
-    <div class="clear"></div>
-  </div>
+  <%= render 'shared/post_category_menu' %>
   <div class="expert_list_wrapper">
   <%= render 'sponsors_title' %>
     <div class="expert_list">
@@ -35,4 +27,8 @@
       <div class="clear"></div>
     </div>
   </div>
+<div class="sidebar">
+    <%= render 'shared/sidebar_promo' %>
+  </div>
+  <div class="clear"></div>
 </div>
