--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer_shadow">
+﻿<div class="footer_shadow">
 <div class="wrapper">
 <div class="footer_header"></div>
 <div class="footer_content">
@@ -20,12 +20,13 @@
       <div class="center column">
         <div class="menu">
           <ul>
+            <li><%= link_to 'Главная', '/' %></li>
             <li><%= link_to 'Детские студии', activities_path %></li>
             <li><%= link_to 'Фестиваль', page_path('about_festival') %></li>
             <li><%= link_to 'Яркий журнал', articles_path %></li>
             <li><%= link_to 'Конкурсы', contests_path %></li>
             <li><%= link_to 'Спецпроекты', special_projects_path %></li>
-            <li><%= link_to 'О нас', experts_path %></li>
+            <li><%= link_to 'О нас', '/about_company' %></li>
           </ul>
         </div>
         
